create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -411,8 +411,12 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#header1-j .mbr-section-title I {
-  text-align: right;
+#content5-n .mbr-section-title,
+#content5-n p {
+  color: #fff;
+}
+#content5-n .mbr-section-title {
+  text-align: center;
 }
 #form1-3 .form-control-label {
   color: #232323;
