--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -410,6 +412,10 @@ h6,
 }
 .scrollToTop_wraper {
   opacity: 0 !important;
+}
+#msg-box5-a H3 {
+  color: #cccccc;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 #content5-n .mbr-section-title,
 #content5-n p {
