--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+
 
 
 
@@ -421,13 +424,11 @@ h6,
   color: #2c492a;
   font-family: 'Roboto Condensed', sans-serif;
 }
-#content5-n .mbr-section-title,
-#content5-n p {
-  color: #fff;
+#header3-r .mbr-section-title {
+  font-family: 'Indie Flower', cursive;
 }
-#content5-n .mbr-section-title {
-  text-align: center;
-  color: #c1c1c1;
+#content1-b P {
+  font-family: 'Indie Flower', cursive;
 }
 #form1-3 .form-control-label {
   color: #232323;
